# RTEDV

./: README.md  settings.gradle.kts  workflow
OpenCV_Android_Java/: build.gradle.kts
app/: build.gradle.kts
app/src/main/java/com/flamapp/rtedv/: MainActivity.kt  YuvToMatConverter.kt
app/src/main/res/drawable/: ic_edge_detection.xml  ic_launcher_foreground.xml  ic_toggle_switch.xml
app/src/main/res/layout/: activity_main.xml  stats_overlay.xml
gl/: build.gradle.kts
gl/src/androidTest/java/com/flamapp/gl/: ExampleInstrumentedTest.kt
gl/src/main/java/com/flamapp/gl/: CameraGlRenderer.kt  GLSurfaceViewRenderer.kt  GLView.kt  GlCameraView.kt  GlUtils.kt
gl/src/test/java/com/flamapp/gl/: ExampleUnitTest.kt
jni/: build.gradle.kts
jni/src/androidTest/java/com/flamapp/jni/: ExampleInstrumentedTest.kt
jni/src/main/cpp/: CMakeLists.txt  JniBridge.cpp  OpenCVProcessor.cpp  OpenCVProcessor.h  native-lib.cpp
jni/src/main/java/com/flamapp/jni/: NativeProcessor.kt
jni/src/test/java/com/flamapp/jni/: ExampleUnitTest.kt
web/: build.gradle.kts  index.html  package-lock.json  package.json
web/src/androidTest/java/com/flamapp/web/: ExampleInstrumentedTest.kt
web/src/main/: frame-manager.ts  stats-display.ts  viewer.ts
web/src/test/java/com/flamapp/web/: ExampleUnitTest.kt
